# SRI_Projects

./: .gitignore  .gitmodules  Links  README.md  Rossby.m  Test.m
CO2/: main.py
DataPlot/: MakeVideo  Plotting.py  Test.py  main.py
Diploma/: 01 First task.odt  02 Second task.docx  Citation
Diploma/Articles/: Links
Diploma/Text/: CitationDB.bak  CitationDB.bib  CitationDB.bib.bak  CitationDB.sav.bak  main.aux  main.bbl  main.bcf  main.blg  main.out  main.run.xml  main.tex  main.toc
Diploma/Text/Appendices/: LaxFriedrichs.tex  RK2WENO.tex  RichtmyerZwas.tex
Diploma/Text/Code/: LaxFriedrichs.tex  Richtmyer.tex  RichtmyerZwas.tex
Diploma/Text/FirstOrder/: LaxFriedrichs.tex  LinearStabilityVonNeumann.tex  NonLinearStability.tex  Schemes.tex
Diploma/Text/NonOscillatory/: ENO.tex  TVD.tex  WENO.tex
Diploma/Text/Problem/: GeneralEquations.tex  InitialsAndBoundaries.tex  LaxTheorem.tex  Methods.tex  VonNeumannStability.tex
Diploma/Text/SecondOrder/: ArtificialViscosity.tex  RichtmyerScheme.tex  RichtmyerStability.tex  RichtmyerZwasStability.tex  Schemes.tex  ZwasScheme.tex
Diploma/Text/svg-inkscape/: ENO_svg-tex.pdf_tex  LaxFriedrichs_svg-tex.pdf_tex  Richtmyer_svg-tex.pdf_tex  Viscosity_svg-tex.pdf_tex  WENO_svg-tex.pdf_tex  Zwas_svg-tex.pdf_tex
PlottingPipeline/: Plotting.py
RossbyWaves/MagneticWaves/: CMakeLists.txt  main.cpp
RossbyWaves/MagneticWaves/Shaders/: Shader.vert
ShallowWater/: CMakeLists.txt  Equations.odt  MainWindow.cpp  MainWindow.h  main.cpp
ShallowWater(Simplified)/: CMakeLists.txt
ShallowWater(Simplified)/Libs/dMath/Core/: dVectors.cpp  dVectors.h
ShallowWater(Simplified)/Libs/dMath/NumerCalc/: CMakeLists.txt  dRungeKutta.cpp
ShallowWater(Simplified)/include/: dLaxWendroff.cpp  dLaxWendroff.h  dRichtmyerMethod.cpp  dRichtmyerMethod.h  dvectors.cpp  dvectors.h  mainwindow.cpp  mainwindow.h
ShallowWater/Calculation/: Calculation.cpp  Calculation.h
ShallowWater/Include/Calculation/: Calculation.cpp  Calculation.h
ShallowWater/Include/dMath/: CMakeLists.txt  dMath.h
ShallowWater/Include/dMath/Core/: dVectors.cpp  dVectors.h
ShallowWater/Include/dMath/NumerCalc/: dLaxFriedrichs.cpp  dLaxFriedrichs.h
ShallowWater/Libs/dMath/: dMath.h
ShallowWater/Libs/dMath/Core/: CMakeLists.txt  dVectors.h
ShallowWater/Libs/dMath/NumerCalc/: dCorner.cpp  dCorner.h  dRungeKutta.h
ShallowWater/UI/: MainWindow.cpp  MainWindow.h
ShallowWaterNew/: .~lock.Field.ods#  CMakeLists.txt  Equations.odt  Field.ods  main.cpp
ShallowWaterNew/Libs/dMath/Core/: dQuaternion.h  dVector.h  dVector2D.h  dVector3D.h  dVectorND.h  dVectors.cpp  dVectors.h
ShallowWaterNew/Libs/dMath/NumerCalc/: CMakeLists.txt  dLaxFriedrichs2D.h  dRichtmyer.cpp  dRichtmyer.h  dRichtmyer2D.cpp  dRichtmyer2D.h  dRungeKutta.cpp  dRungeKutta.h
ShallowWaterNew/Solver/: CMakeLists.txt  OutputDataFormat.cpp  OutputDataFormat.h  RossbySolver.cpp  RossbySolver.h  Solver.cpp  Solver.h  TestSolver.cpp  TestSolver.h
SphereTessellation/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
SphereTessellation/Include/: DivisionGL.cpp  DivisionGL.h
SphereTessellation/Shaders/: fShader.glsl  vShader.glsl
Voigt/: Data.out  Plot.py  main.py
